--- a/src/app/pages/detalles-persona/detalles-persona.component.html
+++ b/src/app/pages/detalles-persona/detalles-persona.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="guardar( formulario )"  #formulario = "ngForm">
+<form (ngSubmit)="editar( formulario )"  #formulario = "ngForm">
     <label >Ingresar ID</label>
     <input type="text" name="id" [(ngModel)]="id"  class="form-control">
 
